# sally_love_real_estate

./: .dockerignore  .gitignore  BoldTrail_API_V2_Endpoints.md  Dockerfile  INTEGRATION_STATUS.md  PHONE_NUMBER_SETUP.md  QUICK_START.md  README.md  REQUIREMENTS.md  ROUTE_TO_AGENT_GUIDE.md  ROUTE_TO_AGENT_IMPLEMENTATION.md  SETUP_GUIDE.md  START_HERE.md  TEMP_TEST_CONFIG.md  TEST_ENDPOINT_REMOVE_BEFORE_PRODUCTION.md  TEST_MODE_CONFIGURATION.md  VAPI_KNOWLEDGE_BASE.md  VAPI_PHONE_NUMBER_ASSIGNMENT.md  VAPI_SYSTEM_PROMPT.md  VAPI_SYSTEM_PROMPT_2.md  VAPI_TOOLS_CONFIGURATION.md  VIEWING_LOGS.md  context.json  env.txt  fly.toml  main.py  pyproject.toml
.cursor/: context.json
.cursor/plans/: roster_transfer_integration_51475298.plan.md
.cursor/rules/: project-rules.mdc
data/: agent_roster.json
docs/: INDEX.md  Sally Love V1 Agent Feedback.txt
docs/configuration/: ENV_CONFIGURATION.md  ENV_REFERENCE.md  (+2 more)
scripts/: README_TESTING.md  check_vapi_call.py  create_vapi_transfer_tool.py  setup_vapi.py  sync_secrets_to_fly.py  test_email_from_production.sh  test_function_endpoints.py  test_ghl_webhook.py  test_integrations.py  test_lead_creation_latency.py  test_route_to_agent.py  test_sms.py  validate_route_to_agent_tool.py  verify_crm_contact.py  verify_setup.py
skills/: PromptEngineeringSkills.md
src/: __init__.py
tests/: __init__.py  boldtrail_xml_feed_test.py  check_vapi_call.py  test_address_matching.py  test_call_transfer.py  test_email_client.py  test_functions.py  test_ghl_webhook.py  test_roster.py  test_send_notification.py  validate_xml_feed.py
(+55 files in other folders)
